# OpenBroadcastIntercom

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  intercom-app-settings.example.json  intercom-state.example.json
.github/workflows/: ci.yml  release.yml
clients/app/: Cargo.toml  Info.ios.plist  build.rs  tauri.conf.json  tauri.ios.conf.json
clients/app/icons/: icon.icns
clients/app/scripts/: ios-build-sim.sh  ios-clean-build-output.sh  ios-dev.sh  ios-device-build.sh  ios-device-dev.sh  mobile-doctor.sh  package-native.sh
clients/app/src/: ios_mobile.m  lib.rs  main.rs  mobile_audio.rs
clients/app/tauri-assets/: client-api.js  client-controls.css  client-controls.html  client-controls.js  index.html  mobile.css  mobile.html  mobile.js  settings.css  settings.html  settings.js
clients/bridge/: Cargo.toml
clients/bridge-app/: Cargo.toml  tauri.conf.json
clients/bridge-app/scripts/: package-native.sh
clients/bridge-app/src/: lib.rs  main.rs
clients/bridge-app/tauri-assets/: index.html
clients/bridge/src/: main.rs
clients/core/: Cargo.toml
clients/core/src/: lib.rs  ui.rs
clients/desktop/: Cargo.toml  build.rs
clients/desktop/src/: ios_voice.rs  ios_voice_processing.c  lib.rs  macos_mic_mode.m  macos_mic_mode.rs  macos_voice.rs  main.rs
clients/esp32/: CMakeLists.txt  Makefile  README.md  sdkconfig.defaults
clients/esp32/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  intercom_protocol.c  intercom_protocol.h  main.c  pcm_frame_ring.c  pcm_frame_ring.h
clients/ndi-runtime/: Cargo.toml
clients/ndi-runtime/src/: lib.rs
clients/pi/: Cargo.toml
clients/pi-gpio/: Cargo.toml
clients/pi-gpio/src/: main.rs
clients/pi/src/: main.rs
clients/shared-ui/talking/: client-api-http.js  client-controls.css  client-controls.html  client-controls.js
common/: Cargo.toml  build.rs
common/src/: admin.rs  audio.rs  build_info.rs  device.rs  lib.rs  processing.rs  protocol.rs  status.rs
docs/: README.md  advanced-routing-ui.md  api-reference.md  architecture.md  bridge-app.md  client-ui-screenshots.md  codec-findings.md  command-reference.md  field-testing.md  generated-artifacts.md  hardware.md  ifb-talent-workflows.md  mobile-clients.md  model-assets.md  native-app.md  public-repo-hygiene.md  release-automation.md  transcription-benchmarks.md
intercom-models/: manifest.json
server/: Cargo.toml
server-app/: Cargo.toml  build.rs  tauri.conf.json
server-app/.cargo/: config.toml
server-app/src/: lib.rs
server-app/tauri-assets/: index.html
server/admin/: app.js  calls.html  clients.html  dashboard.html  presets.html  recording.html  routing.html  style.css  system.html
server/src/: deepfilternet_coreml.rs  discovery.rs  lib.rs  main.rs  supertonic_tts.rs
server/tests/: control.rs  forwarding.rs
tools/: check-generated-artifacts.sh  check-model-manifest.py  check-public-secrets.sh  check-version-sync.sh  convert-deepfilternet-coreml.py  download-whisper-models.py  esp32  generate-client-ui-screenshots.mjs  mlx_whisper_benchmark.py  moonshine_benchmark.py  parakeet_benchmark.py  release_version.py  rolling_transcription_replay.py  run_mlx_whisper_benchmarks.py  run_moonshine_benchmarks.py  run_parakeet_benchmarks.py  run_transcription_benchmarks.py  run_whisperkit_benchmarks.py  test_release_version.py  test_transcription_benchmark.py  transcription_benchmark.py  transformers_whisper_benchmark.py  verify-deepfilternet-coreml.swift  whisperkit_benchmark.py
tools/admin/: Cargo.toml
tools/admin/src/: main.rs
tools/netem/: Cargo.toml
tools/netem/src/: main.rs
