[workspace]
members = [
    "common",
    "clients/core",
    "server",
    "clients/desktop",
    "clients/app",
    "clients/pi",
    "clients/pi-gpio",
    "clients/ndi-runtime",
    "clients/bridge",
    "clients/bridge-app",
    "server-app",
    "tools/admin",
    "tools/netem",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "2026.5.9"

[workspace.dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["ws"] }
base64 = "0.22"
clap = { version = "4.5", features = ["derive", "env"] }
common = { path = "common" }
client-core = { path = "clients/core" }
cpal = "0.15"
coreaudio-rs = "0.11"
crossterm = "0.27"
futures-util = "0.3"
hound = "3.5"
libloading = "0.8"
ndi-runtime = { path = "clients/ndi-runtime" }
quick-xml = "0.39"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rubato = "2"
thiserror = "1.0"
tokio = { version = "1.37", features = ["full"] }
tokio-tungstenite = "0.23"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
whisper-rs = "0.16"
