[package]
name = "server"
edition.workspace = true
license.workspace = true
version.workspace = true

[features]
default = []
processing-webrtc = ["dep:webrtc-audio-processing"]
processing-rnnoise = ["dep:nnnoiseless"]
processing-deepfilternet = ["dep:df", "dep:ndarray", "dep:tract-core", "dep:tract-hir", "dep:tract-onnx", "dep:tract-pulse"]
processing-deepfilternet-coreml = ["processing-deepfilternet"]
transcription-whisper = ["dep:whisper-rs"]
tts-supertonic = ["dep:ort"]
processing-all = ["processing-webrtc", "processing-rnnoise", "processing-deepfilternet"]
engines-all = ["processing-all", "transcription-whisper", "tts-supertonic"]
macos-metal = ["transcription-whisper", "whisper-rs/metal"]
macos-coreml = ["transcription-whisper", "whisper-rs/coreml"]
macos-accelerated = ["macos-metal"]

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
clap.workspace = true
common.workspace = true
df = { git = "https://github.com/Rikorose/DeepFilterNet", version = "0.5.7-pre", package = "deep_filter", default-features = false, features = ["tract"], optional = true }
futures-util.workspace = true
hound.workspace = true
ndarray = { version = "0.15", optional = true }
ndarray17 = { version = "0.17", package = "ndarray" }
nnnoiseless = { version = "0.5", optional = true }
opus = "0.3"
ort = { version = "2.0.0-rc.12", optional = true }
rand = "0.8"
rand_distr = "0.4"
regex = "1.10"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
tokio.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tract-core = { version = "=0.21.4", optional = true }
tract-hir = { version = "=0.21.4", optional = true }
tract-onnx = { version = "=0.21.4", optional = true }
tract-pulse = { version = "=0.21.4", optional = true }
unicode-normalization = "0.1"
webrtc-audio-processing = { version = "~2.0", features = ["bundled"], optional = true }
whisper-rs = { workspace = true, optional = true }

[dev-dependencies]
tokio.workspace = true
