[package]
name = "bridge-app"
edition.workspace = true
license.workspace = true
version.workspace = true
default-run = "bridge-app-native"

[features]
default = []
native = ["dep:tauri"]

[[bin]]
name = "bridge-app-native"
path = "src/bin/bridge_app_native.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
client-core.workspace = true
common.workspace = true
cpal.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tauri = { version = "2", optional = true, features = [] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
