[package]
name = "pi"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
client-core.workspace = true
clap.workspace = true
common.workspace = true
cpal.workspace = true
futures-util.workspace = true
opus = "0.3"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
