[package]
name = "admin"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
common.workspace = true
futures-util.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
